--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -2,7 +2,7 @@
 
 // Base input/select height calculation
 // Additional ones for each size are done during size processing generation
-$input-height-inner:    ($input-font-size * $input-line-height) + ($input-padding-y * 2) !default;
+$input-height-inner:    (1em * #{$input-line-height}) + (#{$input-padding-y * 2}) !default;
 $input-height-outer:    calc(#{$input-height-inner} + #{($input-border-width * 2)}) !default;
 
 @if $enable-form {
@@ -137,7 +137,7 @@ $input-height-outer:    calc(#{$input-height-inner} + #{($input-border-width * 2
             $sz-padding-y:     map-get($dims, "padding-y");
             $sz-padding-x:     map-get($dims, "padding-x");
             $sz-border-radius: map-get($dims, "border-radius");
-            $sz-inner-height:  (($sz-font-size * $sz-line-height) + ($sz-padding-y * 2));
+            $sz-inner-height:  ((1em * #{$sz-line-height}) + (#{$sz-padding-y * 2}));
             $sz-outer-height:  calc(#{$sz-inner-height} + #{($input-border-width * 2)});
 
             %form-control-#{$size} {
