--- a/scss/component/_button-group.scss
+++ b/scss/component/_button-group.scss
@@ -113,7 +113,7 @@
                 }
                 @if $enable-btn-icon {
                     .btn-group-#{$size} > .btn-icon {
-                        @extend %btn-icon-#{$size};
+                        @extend %btn-icon-#{$size} !optional;
                     }
                 }
             }
