--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -241,7 +241,7 @@
         .custom-select {
             display: block;
             width: 100%;
-            height: $input-height-outer;
+            height: calc-input-height-outer($input-padding-y, $input-line-height);
             padding: $input-padding-y calc(#{$input-padding-x} + #{$custom-select-indicator-width} + #{$custom-select-indicator-offset}) $input-padding-y $input-padding-x;
             @include font-size($input-font-size);
             font-family: $input-font-family;
@@ -297,15 +297,19 @@
             $sz-padding-y:     map-get($dims, "padding-y");
             $sz-padding-x:     map-get($dims, "padding-x");
             $sz-border-radius: map-get($dims, "border-radius");
-            $sz-inner-height:  ((1em * #{$sz-line-height}) + (#{$sz-padding-y * 2}));
-            $sz-outer-height:  calc(#{$sz-inner-height} + #{($border-width * 2)});
 
             @if $enable-custom-select and $enable-custom-select-sizing {
                 // stylelint-disable declaration-block-no-duplicate-properties
                 .custom-select-#{$size} {
-                    height: $sz-outer-height;
-                    padding: $sz-padding-y $sz-padding-x;
-                    padding-right: calc(#{$sz-padding-x} + #{$custom-select-indicator-width} + #{$custom-select-indicator-offset});
+                    height: calc-input-height-outer($sz-padding-y, $sz-line-height);
+                    @if $sz-padding-y != null and $sz-padding-x != null {
+                        $my-padding-y: if($sz-padding-y != null, $sz-padding-y, $input-padding-y);
+                        $my-padding-x: if($sz-padding-x != null, $sz-padding-x, $input-padding-x);
+                        padding: $my-padding-y $my-padding-x;
+                    }
+                    @if $sz-padding-x != null {
+                        padding-right: calc(#{$sz-padding-x} + #{$custom-select-indicator-width} + #{$custom-select-indicator-offset});
+                    }
                     @include font-size($sz-font-size);
                     line-height: $sz-line-height;
                     @include border-radius($sz-border-radius);
@@ -322,7 +326,7 @@
             position: relative;
             display: inline-block;
             width: 100%;
-            height: $input-height-outer;
+            height: calc-input-height-outer($input-padding-y, $input-line-height);
             margin-bottom: 0;
         }
 
@@ -330,7 +334,7 @@
             position: relative;
             z-index: 2;
             width: 100%;
-            height: $input-height-outer;
+            height: calc-input-height-outer($input-padding-y, $input-line-height);
             margin: 0;
             opacity: 0;
 
@@ -378,7 +382,7 @@
             right: 0;
             left: 0;
             z-index: 1;
-            height: $input-height-outer;
+            height: calc-input-height-outer($input-padding-y, $input-line-height);
             padding: $input-padding-y $input-padding-x;
             overflow: hidden;
             font-family: $input-font-family;
@@ -398,7 +402,7 @@
                 right: 0;
                 z-index: 2;
                 display: block;
-                height: $input-height-outer;
+                height: calc-input-height-outer($input-padding-y, $input-line-height);
                 padding: $input-padding-y $input-padding-x;
                 font-family: $btn-font-family;
                 line-height: $input-line-height;
@@ -417,8 +421,8 @@
         .custom-color {
             display: block;
             width: auto;
-            min-width: $input-height-inner;
-            height: $input-height-inner;
+            min-width: calc-input-height-inner($input-padding-y, $input-line-height);
+            height: calc-input-height-inner($input-padding-y, $input-line-height);
             @include font-size($input-font-size);
             line-height: $input-line-height;
             color: $input-color;
