--- a/scss/mixins/_pagination.scss
+++ b/scss/mixins/_pagination.scss
@@ -2,7 +2,15 @@
 @mixin pagination-size($padding-y, $padding-x, $font-size, $line-height, $border-radius) {
     .page-text,
     .page-link {
-        padding: $padding-y $padding-x;
+        @if $padding-y == null and $padding-x == null {
+            // No padding output
+        } @else if $padding-y == null or $padding-x == null {
+            $padding-y: if($padding-y != null, $padding-y, $pagination-padding-y);
+            $padding-x: if($padding-x != null, $padding-x, $pagination-padding-x);
+            padding: $padding-y $padding-x;
+        } @else {
+            padding: $padding-y $padding-x;
+        }
         @include font-size($font-size);
         line-height: $line-height;
         @include border-radius($border-radius);
