Only generate proper pseudo-classes for form validtion

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -876,7 +876,7 @@ $form-validation-states: map-merge(
         "invalid": (
             "color": $form-feedback-invalid-color,
             "icon": $form-feedback-icon-invalid-image
-        ),
+        )
     ),
     $form-validation-states
 );
