--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -56,20 +56,20 @@
         }
 
         select.form-control {
-            padding: $input-padding-y calc(#{$input-padding-x} + #{$form-select-indicator-width} + #{$form-select-indicator-offset}) $input-padding-y $input-padding-x;
+            padding-right: calc(#{$input-padding-x} + #{$form-select-indicator-width} + #{$form-select-indicator-offset});
             vertical-align: middle;
             background: $input-bg $form-select-indicator-image no-repeat right $form-select-indicator-offset center;
             background-size: $form-select-indicator-width $form-select-indicator-height;
             appearance: none;
 
-            :disabled {
+            &:disabled {
                 pointer-events: none;
             }
 
             &[size]:not([size="1"]),
             &[multiple] {
                 height: auto;
-                padding-left: $input-padding-x;
+                padding-right: $input-padding-x;
                 background-image: none;
             }
 
