more `.form-label`

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -750,7 +750,7 @@ $input-disabled-opacity:        1 !default;
 
 $input-placeholder-color:       #999 !default;
 
-$input-label-font-weight:       $font-weight-normal !default;
+$form-label-font-weight:        $font-weight-normal !default;
 
 $form-text-margin-top:          .25rem !default;
 
