--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -58,8 +58,8 @@ $enable-form:                               true !default;
 $enable-form-control:                       true !default;
 $enable-form-control-special:               true !default;
 $enable-form-control-sizing:                true !default;
-$enable-form-control-label:                 true !default;
-$enable-form-control-label-sizing:          true !default;
+$enable-form-label:                         true !default;
+$enable-form-label-sizing:                  true !default;
 $enable-form-control-static:                true !default;
 $enable-form-group:                         true !default;
 $enable-form-text:                          true !default;
