drop special form items, start form scss restructure

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -762,7 +762,7 @@ $form-check-disabled-color:     $component-disabled-color !default;
 $form-check-inline-input-margin-x: .3125rem !default;
 
 $form-group-margin-bottom:      1rem !default;
-$form-row-gutter:               .3125rem !default;
+$form-row-gutter-width:         .625rem !default;
 
 $form-inline-breakpoint:         sm !default;
 
