--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -56,7 +56,6 @@ $enable-btn-check:                          true !default;
 // Form
 $enable-form:                               true !default;
 $enable-form-control:                       true !default;
-$enable-form-control-special:               true !default;
 $enable-form-control-sizing:                true !default;
 $enable-form-label:                         true !default;
 $enable-form-label-sizing:                  true !default;
@@ -66,7 +65,9 @@ $enable-form-text:                          true !default;
 $enable-form-row:                           true !default;
 $enable-form-check:                         true !default;
 $enable-form-check-inline:                  true !default;
+$enable-form-file:                          true !default;
 $enable-form-range:                         true !default;
+$enable-form-color:                         true !default;
 $enable-form-validation:                    true !default;
 $enable-form-validation-feedback:           true !default;
 $enable-form-validation-tooltip:            true !default;
@@ -77,8 +78,7 @@ $enable-custom-control:                     true !default;
 $enable-custom-checkbox:                    true !default;
 $enable-custom-radio:                       true !default;
 $enable-custom-switch:                      true !default;
-$enable-custom-file:                        true !default;
-$enable-custom-color:                       true !default;
+
 
 // Alert
 $enable-alert:                              true !default;
